kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: manpreet

spec:
  containers:
  - name: manpreet
    image: mkddthisismanpreetkaur/mkm-python-django-app:latestapp
    ports:
    - containerPort: 80
