kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  djangoapp
spec:
  selector:
    app:  hello_world
  type: NodePort
  ports:
  - name:  name-of-the-prt
    port:  80
    targetPort:  8000
