kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: demo
  annotation:
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  # ingressclassName: nginx
  rules:
  - host: manpreetkaur.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: django-service
              port:
                number: 80
